program_analysis/src/parser/TheLangParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g 2013-10-26 20:07:34

package parser;

import ast.*;
import ast.arith.*;
import ast.bool.*;
import ast.statement.*;
import ast.declaration.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
public class TheLangParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "IDENTIFIER", "INTEGER", "COMMENT", "LETTER", "WS", "'program'", "'end'", "'int'", "';'", "'['", "']'", "'low'", "'high'", "':='", "'skip'", "'read'", "'write'", "'if'", "'then'", "'else'", "'fi'", "'while'", "'do'", "'od'", "'|'", "'&'", "'true'", "'false'", "'='", "'<='", "'<'", "'>='", "'>'", "'!='", "'!'", "'('", "')'", "'+'", "'-'", "'*'", "'/'"
    };
    public static final int EOF=-1;
    public static final int T__9=9;
    public static final int T__10=10;
    public static final int T__11=11;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int IDENTIFIER=4;
    public static final int INTEGER=5;
    public static final int COMMENT=6;
    public static final int LETTER=7;
    public static final int WS=8;

    // delegates
    // delegators


        public TheLangParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public TheLangParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return TheLangParser.tokenNames; }
    public String getGrammarFileName() { return "E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g"; }



    // $ANTLR start "program"
    // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:23:1: program returns [Program value] : 'program' (d= declaration s= statement 'end' EOF | s= statement 'end' EOF ) ;
    public final Program program() throws RecognitionException {
        Program value = null;

        Declaration d = null;

        Statement s = null;


        try {
            // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:24:5: ( 'program' (d= declaration s= statement 'end' EOF | s= statement 'end' EOF ) )
            // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:24:7: 'program' (d= declaration s= statement 'end' EOF | s= statement 'end' EOF )
            {
            match(input,9,FOLLOW_9_in_program54); if (state.failed) return value;
            // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:24:17: (d= declaration s= statement 'end' EOF | s= statement 'end' EOF )
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==11||(LA1_0>=15 && LA1_0<=16)) ) {
                alt1=1;
            }
            else if ( (LA1_0==IDENTIFIER||(LA1_0>=18 && LA1_0<=21)||LA1_0==25) ) {
                alt1=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return value;}
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;
            }
            switch (alt1) {
                case 1 :
                    // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:24:19: d= declaration s= statement 'end' EOF
                    {
                    pushFollow(FOLLOW_declaration_in_program60);
                    d=declaration();

                    state._fsp--;
                    if (state.failed) return value;
                    pushFollow(FOLLOW_statement_in_program64);
                    s=statement();

                    state._fsp--;
                    if (state.failed) return value;
                    match(input,10,FOLLOW_10_in_program66); if (state.failed) return value;
                    match(input,EOF,FOLLOW_EOF_in_program68); if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                       value = new Program(d,s); 
                    }

                    }
                    break;
                case 2 :
                    // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:25:9: s= statement 'end' EOF
                    {
                    pushFollow(FOLLOW_statement_in_program82);
                    s=statement();

                    state._fsp--;
                    if (state.failed) return value;
                    match(input,10,FOLLOW_10_in_program84); if (state.failed) return value;
                    match(input,EOF,FOLLOW_EOF_in_program86); if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                       value = new Program(s); 
                    }

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "program"


    // $ANTLR start "declaration"
    // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:29:1: declaration returns [Declaration value] : d= base_declaration (d= base_declaration )* ;
    public final Declaration declaration() throws RecognitionException {
        Declaration value = null;

        Declaration d = null;


        try {
            // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:30:5: (d= base_declaration (d= base_declaration )* )
            // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:30:7: d= base_declaration (d= base_declaration )*
            {
            pushFollow(FOLLOW_base_declaration_in_declaration118);
            d=base_declaration();

            state._fsp--;
            if (state.failed) return value;
            if ( state.backtracking==0 ) {
               value = d; 
            }
            // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:31:7: (d= base_declaration )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==11||(LA2_0>=15 && LA2_0<=16)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:31:9: d= base_declaration
            	    {
            	    pushFollow(FOLLOW_base_declaration_in_declaration135);
            	    d=base_declaration();

            	    state._fsp--;
            	    if (state.failed) return value;
            	    if ( state.backtracking==0 ) {
            	       value = new SeqDeclaration(value,d); 
            	    }

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "declaration"


    // $ANTLR start "base_declaration"
    // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:34:1: base_declaration returns [Declaration value] : ( level )? 'int' IDENTIFIER ( ';' | '[' INTEGER ']' ';' ) ;
    public final Declaration base_declaration() throws RecognitionException {
        Declaration value = null;

        Token IDENTIFIER1=null;
        Token INTEGER2=null;

        try {
            // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:35:5: ( ( level )? 'int' IDENTIFIER ( ';' | '[' INTEGER ']' ';' ) )
            // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:35:7: ( level )? 'int' IDENTIFIER ( ';' | '[' INTEGER ']' ';' )
            {
            // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:35:7: ( level )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( ((LA3_0>=15 && LA3_0<=16)) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:0:0: level
                    {
                    pushFollow(FOLLOW_level_in_base_declaration164);
                    level();

                    state._fsp--;
                    if (state.failed) return value;

                    }
                    break;

            }

            match(input,11,FOLLOW_11_in_base_declaration174); if (state.failed) return value;
            IDENTIFIER1=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_base_declaration176); if (state.failed) return value;
            // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:36:24: ( ';' | '[' INTEGER ']' ';' )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==12) ) {
                alt4=1;
            }
            else if ( (LA4_0==13) ) {
                alt4=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return value;}
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:36:25: ';'
                    {
                    match(input,12,FOLLOW_12_in_base_declaration179); if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                       value = new VariableDeclaration(IDENTIFIER1.getText()); 
                    }

                    }
                    break;
                case 2 :
                    // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:38:8: '[' INTEGER ']' ';'
                    {
                    match(input,13,FOLLOW_13_in_base_declaration196); if (state.failed) return value;
                    INTEGER2=(Token)match(input,INTEGER,FOLLOW_INTEGER_in_base_declaration198); if (state.failed) return value;
                    match(input,14,FOLLOW_14_in_base_declaration200); if (state.failed) return value;
                    match(input,12,FOLLOW_12_in_base_declaration202); if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                       value = new ArrayDeclaration(IDENTIFIER1.getText(), Integer.parseInt(INTEGER2.getText()));
                    }

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "base_declaration"


    // $ANTLR start "level"
    // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:43:1: level : ( 'low' | 'high' );
    public final void level() throws RecognitionException {
        try {
            // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:43:7: ( 'low' | 'high' )
            // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:
            {
            if ( (input.LA(1)>=15 && input.LA(1)<=16) ) {
                input.consume();
                state.errorRecovery=false;state.failed=false;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "level"


    // $ANTLR start "statement"
    // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:45:1: statement returns [Statement value] : s= base_statement (s= base_statement )* ;
    public final Statement statement() throws RecognitionException {
        Statement value = null;

        Statement s = null;


        try {
            // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:46:5: (s= base_statement (s= base_statement )* )
            // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:46:7: s= base_statement (s= base_statement )*
            {
            pushFollow(FOLLOW_base_statement_in_statement255);
            s=base_statement();

            state._fsp--;
            if (state.failed) return value;
            if ( state.backtracking==0 ) {
               value = s; 
            }
            // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:47:7: (s= base_statement )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==IDENTIFIER||(LA5_0>=18 && LA5_0<=21)||LA5_0==25) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:47:9: s= base_statement
            	    {
            	    pushFollow(FOLLOW_base_statement_in_statement275);
            	    s=base_statement();

            	    state._fsp--;
            	    if (state.failed) return value;
            	    if ( state.backtracking==0 ) {
            	       value = new SeqStatement(value,s); 
            	    }

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "statement"


    // $ANTLR start "base_statement"
    // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:50:1: base_statement returns [Statement value] : (s= assignStmt | s= skipStmt | s= readStmt | s= writeStmt | s= ifStmt | s= whileStmt );
    public final Statement base_statement() throws RecognitionException {
        Statement value = null;

        Statement s = null;


        try {
            // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:51:5: (s= assignStmt | s= skipStmt | s= readStmt | s= writeStmt | s= ifStmt | s= whileStmt )
            int alt6=6;
            switch ( input.LA(1) ) {
            case IDENTIFIER:
                {
                alt6=1;
                }
                break;
            case 18:
                {
                alt6=2;
                }
                break;
            case 19:
                {
                alt6=3;
                }
                break;
            case 20:
                {
                alt6=4;
                }
                break;
            case 21:
                {
                alt6=5;
                }
                break;
            case 25:
                {
                alt6=6;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return value;}
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }

            switch (alt6) {
                case 1 :
                    // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:51:7: s= assignStmt
                    {
                    pushFollow(FOLLOW_assignStmt_in_base_statement305);
                    s=assignStmt();

                    state._fsp--;
                    if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                       value = s; 
                    }

                    }
                    break;
                case 2 :
                    // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:52:7: s= skipStmt
                    {
                    pushFollow(FOLLOW_skipStmt_in_base_statement319);
                    s=skipStmt();

                    state._fsp--;
                    if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                       value = s; 
                    }

                    }
                    break;
                case 3 :
                    // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:53:7: s= readStmt
                    {
                    pushFollow(FOLLOW_readStmt_in_base_statement333);
                    s=readStmt();

                    state._fsp--;
                    if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                       value = s; 
                    }

                    }
                    break;
                case 4 :
                    // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:54:7: s= writeStmt
                    {
                    pushFollow(FOLLOW_writeStmt_in_base_statement347);
                    s=writeStmt();

                    state._fsp--;
                    if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                       value = s; 
                    }

                    }
                    break;
                case 5 :
                    // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:55:7: s= ifStmt
                    {
                    pushFollow(FOLLOW_ifStmt_in_base_statement361);
                    s=ifStmt();

                    state._fsp--;
                    if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                       value = s; 
                    }

                    }
                    break;
                case 6 :
                    // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:56:7: s= whileStmt
                    {
                    pushFollow(FOLLOW_whileStmt_in_base_statement375);
                    s=whileStmt();

                    state._fsp--;
                    if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                       value = s; 
                    }

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "base_statement"


    // $ANTLR start "assignStmt"
    // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:59:1: assignStmt returns [Statement value] : IDENTIFIER ( ':=' e= arith_expr ';' | '[' e1= arith_expr ']' ':=' e2= arith_expr ';' ) ;
    public final Statement assignStmt() throws RecognitionException {
        Statement value = null;

        Token IDENTIFIER3=null;
        ArithExpr e = null;

        ArithExpr e1 = null;

        ArithExpr e2 = null;


        try {
            // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:60:2: ( IDENTIFIER ( ':=' e= arith_expr ';' | '[' e1= arith_expr ']' ':=' e2= arith_expr ';' ) )
            // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:60:4: IDENTIFIER ( ':=' e= arith_expr ';' | '[' e1= arith_expr ']' ':=' e2= arith_expr ';' )
            {
            IDENTIFIER3=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_assignStmt399); if (state.failed) return value;
            // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:60:15: ( ':=' e= arith_expr ';' | '[' e1= arith_expr ']' ':=' e2= arith_expr ';' )
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==17) ) {
                alt7=1;
            }
            else if ( (LA7_0==13) ) {
                alt7=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return value;}
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }
            switch (alt7) {
                case 1 :
                    // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:60:16: ':=' e= arith_expr ';'
                    {
                    match(input,17,FOLLOW_17_in_assignStmt402); if (state.failed) return value;
                    pushFollow(FOLLOW_arith_expr_in_assignStmt406);
                    e=arith_expr();

                    state._fsp--;
                    if (state.failed) return value;
                    match(input,12,FOLLOW_12_in_assignStmt408); if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                       value = new AssignStatement(IDENTIFIER3.getText(), e); 
                    }

                    }
                    break;
                case 2 :
                    // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:62:4: '[' e1= arith_expr ']' ':=' e2= arith_expr ';'
                    {
                    match(input,13,FOLLOW_13_in_assignStmt416); if (state.failed) return value;
                    pushFollow(FOLLOW_arith_expr_in_assignStmt422);
                    e1=arith_expr();

                    state._fsp--;
                    if (state.failed) return value;
                    match(input,14,FOLLOW_14_in_assignStmt424); if (state.failed) return value;
                    match(input,17,FOLLOW_17_in_assignStmt425); if (state.failed) return value;
                    pushFollow(FOLLOW_arith_expr_in_assignStmt429);
                    e2=arith_expr();

                    state._fsp--;
                    if (state.failed) return value;
                    match(input,12,FOLLOW_12_in_assignStmt431); if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                       value = new ArrayAssignStatement(IDENTIFIER3.getText(), e1, e2); 
                    }

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "assignStmt"


    // $ANTLR start "skipStmt"
    // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:65:1: skipStmt returns [Statement value] : 'skip' ';' ;
    public final Statement skipStmt() throws RecognitionException {
        Statement value = null;

        try {
            // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:66:2: ( 'skip' ';' )
            // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:66:4: 'skip' ';'
            {
            match(input,18,FOLLOW_18_in_skipStmt449); if (state.failed) return value;
            match(input,12,FOLLOW_12_in_skipStmt451); if (state.failed) return value;
            if ( state.backtracking==0 ) {
               value = new SkipStatement(); 
            }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "skipStmt"


    // $ANTLR start "readStmt"
    // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:70:1: readStmt returns [Statement value] : 'read' IDENTIFIER ( ';' | '[' e= arith_expr ']' ';' ) ;
    public final Statement readStmt() throws RecognitionException {
        Statement value = null;

        Token IDENTIFIER4=null;
        ArithExpr e = null;


        try {
            // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:71:2: ( 'read' IDENTIFIER ( ';' | '[' e= arith_expr ']' ';' ) )
            // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:71:4: 'read' IDENTIFIER ( ';' | '[' e= arith_expr ']' ';' )
            {
            match(input,19,FOLLOW_19_in_readStmt503); if (state.failed) return value;
            IDENTIFIER4=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_readStmt505); if (state.failed) return value;
            // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:71:21: ( ';' | '[' e= arith_expr ']' ';' )
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==12) ) {
                alt8=1;
            }
            else if ( (LA8_0==13) ) {
                alt8=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return value;}
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                throw nvae;
            }
            switch (alt8) {
                case 1 :
                    // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:71:23: ';'
                    {
                    match(input,12,FOLLOW_12_in_readStmt508); if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                       value = new ReadStatement(IDENTIFIER4.getText());
                    }

                    }
                    break;
                case 2 :
                    // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:73:4: '[' e= arith_expr ']' ';'
                    {
                    match(input,13,FOLLOW_13_in_readStmt516); if (state.failed) return value;
                    pushFollow(FOLLOW_arith_expr_in_readStmt522);
                    e=arith_expr();

                    state._fsp--;
                    if (state.failed) return value;
                    match(input,14,FOLLOW_14_in_readStmt524); if (state.failed) return value;
                    match(input,12,FOLLOW_12_in_readStmt526); if (state.failed) return value;
                    if ( state.backtracking==0 ) {
                       value = new ReadArrayStatement(IDENTIFIER4.getText(),e);
                    }

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "readStmt"


    // $ANTLR start "writeStmt"
    // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:78:1: writeStmt returns [Statement value] : 'write' e= arith_expr ';' ;
    public final Statement writeStmt() throws RecognitionException {
        Statement value = null;

        ArithExpr e = null;


        try {
            // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:79:2: ( 'write' e= arith_expr ';' )
            // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:79:4: 'write' e= arith_expr ';'
            {
            match(input,20,FOLLOW_20_in_writeStmt548); if (state.failed) return value;
            pushFollow(FOLLOW_arith_expr_in_writeStmt554);
            e=arith_expr();

            state._fsp--;
            if (state.failed) return value;
            match(input,12,FOLLOW_12_in_writeStmt556); if (state.failed) return value;
            if ( state.backtracking==0 ) {
               value = new WriteStatement(e);
            }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "writeStmt"


    // $ANTLR start "ifStmt"
    // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:82:1: ifStmt returns [Statement value] : 'if' c= bool_expr 'then' s1= statement 'else' s2= statement 'fi' ;
    public final Statement ifStmt() throws RecognitionException {
        Statement value = null;

        BoolExpr c = null;

        Statement s1 = null;

        Statement s2 = null;


        try {
            // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:83:2: ( 'if' c= bool_expr 'then' s1= statement 'else' s2= statement 'fi' )
            // E:\\Dropbox\\Courses\\program analysis\\code\\program_analysis\\src\\parser\\TheLang.g:83:4: 'if' c= bool_expr 'then' s1= statement 'else' s2= statement 'fi'
            {
            match(input,21,FOLLOW_21_in_ifStmt573); if (state.failed) return value;
            pushFollow(FOLLOW_bool_expr_in_ifStmt577);
            c=bool_expr();

            state._fsp--;
            if (state.failed) return value;
            match(input,22,FOLLOW_22_in_ifStmt579); if (state.failed) return value;
            pushFollow(FOLLOW_statement_in_ifStmt583);
            s1=statement();
